# bare-metal-api

./: .env.template  .gitignore  .pylintrc  README.md  fgtypes.py  main.py  mypy.ini  pyproject.toml  requirements.txt  serversfsm.py  start.sh  synchronization.py
.devcontainer/: devcontainer.json  post-install.sh
apps/: __init__.py  fgtypes.py  serversfsm.py
apps/server_manager/: main.py
crons/: synchronization.py
