[tool.poetry]
name = "bare-metal-api"
version = "0.1.0"
description = ""
authors = ["Zac Pez"]
readme = "README.md"
packages = [{include = "bare_metal_api"}]

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^67.8.0"
requests = "^2.31.0"
elara = "^0.5.5"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
schedule = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
